--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -48,6 +48,7 @@
         "string_view": "c",
         "initializer_list": "c",
         "string": "c",
-        "egbasics.h": "c"
+        "egbasics.h": "c",
+        "appdrawing.h": "c"
     }
 }
