--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
         "appdrawing.h": "c",
         "appparticles.h": "c",
         "eg_sokol_populate.h": "c",
-        "egdrawbuffers.h": "c"
+        "egdrawbuffers.h": "c",
+        "egquantities.h": "c"
     }
 }
