--- a/testbed1/project.json
+++ b/testbed1/project.json
@@ -2,11 +2,7 @@
     "id": "testbed1",
     "type": "application",
     "value": {
-        "author": "Jane Doe",
-        "description": "Coding tutorials for movie stars",
-        "use": [
-            "flecs"
-        ],
+        "use": ["flecs"],
         "public": false
     },
     "lang.c": {
